<resources>

    //Welcome Screen
    <string name="app_name">AquaCulture</string>
    <string name="greet">Halo!</string>
    <string name="welcome1">Selamat datang di Aquaculture, anda dapat dengan mudah mengidentifikasi ikan anda dengan bantuan Machine learning!.</string>
    <string name="welcome2">Cukup dengan mengambil gambar dan machine learning akan otomatis mendeteksi ikan yang anda perlihatkan!</string>
    <string name="welcome3">Anda juga akan mendapatkan informasi tentang cara budidaya ikan yang anda deteksi dan pemberian pangan yang baik untuk ikan tersebut</string>
    <string name="welcome4_1">Tunggu apa lagi?</string>
    <string name="welcome4_2">Yuk masuk sekarang!</string>
    <string name="enter">Masuk</string>
    <string name="welcome_swipe">Geser untuk melanjutkan →→→</string>

    //Scan
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="scanstory">Scan</string>
    <string name="upload_story">Upload Story</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="lang">Language</string>
    <string name="ch_lang">Change Language</string>
    <string name="detected_lang">English</string>
    <string name="cur_lang">Current language :</string>
    <string name="preview">Preview : </string>

    //Details
    <string name="jenis_ikan">Jenis Ikan</string>
    <string name="pakan">Pakan</string>
    <string name="pemeliharaan">Pemeliharaan</string>

    //Account
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>

    //Login
    <string name="login1">Siap Untuk Budidaya Ikan?</string>
    <string name="login2">Masukkan Username dan Password</string>

    //Register
    <string name="title_signup">Lengkapi Data Diri Pendaftaran Dibawah Ini</string>

    //CustomView
    <string name="email_invalid">Format Email Tidak Valid</string>
    <string name="password_error">Password harus lebih dari 6 karakter</string>

    //Login/Register Menu
    <string name="try_now">COBA SEKARANG</string>

    //Fragment
    <string name="beranda">Beranda</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_user">Halo, </string>
    <string name="nama">Nama :</string>
    <string name="email_profile">Email :</string>
    <string name="logout">Logout</string>
    <string name="prediksi_panen">Prediksi Panen : %1$s</string>
    <string name="history">History :</string>
    <string name="no_history">No history data available</string>

</resources>