<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.ProfileFragment">


    <FrameLayout
        android:id="@+id/frame_layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_detail_photo"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/ic_detail_user"
                android:layout_margin="16dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/tv_edit_image_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Image Profile"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:padding="8dp" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="fill_horizontal">



            <TextView
                android:id="@+id/tv_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/nama"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"
                android:padding="8dp"
                tools:alpha="100"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:text="@string/email_profile"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:textColor="@android:color/black"
                android:padding="8dp"
                tools:alpha="100"/>

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#FF4D00"
        android:text="@string/logout"
        android:textColor="@color/black"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="1.5dp" />




</androidx.constraintlayout.widget.ConstraintLayout>