<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/titleDaftar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/icon_back"
            app:layout_constraintTop_toBottomOf="@id/icon_back"/>

        <ImageView
            android:id="@+id/imageSignup"
            android:layout_width="250dp"
            android:layout_height="140dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineHorz2"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleTextSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/title_signup"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineHorz"
            tools:alpha="100" />

        <TextView
            android:id="@+id/nameTextSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            android:text="@string/name"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextSignup"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextSignup"
            app:startIconDrawable="@drawable/ic_person"
            tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTextSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/email"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameEditTextSignup"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTextSignup"
            app:startIconDrawable="@drawable/ic_email"
            tools:alpha="100">

                <com.dicoding.aquaculture.view.customview.EmailEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/password"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditTextSignup"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextSignup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTextSignup"
            app:startIconDrawable="@drawable/ic_lock"
            tools:alpha="100">

                <com.dicoding.aquaculture.view.customview.PasswordEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:alpha="0"
            android:textAllCaps="true"
            android:text="@string/daftar"
            android:textSize="14sp"
            app:cornerRadius="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditTextSignup"
            tools:alpha="100" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorz"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorz2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />


</androidx.constraintlayout.widget.ConstraintLayout>